# TravelToken

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  TASK_DISTRIBUTION.md  docker-compose.yml
backend/: .env.example  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_optimize_pgvector_hnsw.py  07b5401b6bc4_change_embedding_dim_to_768_for_gemini.py
backend/app/: config.py  main.py
backend/app/agents/: budget_agent.py  deal_hunter_agent.py  logging_utils.py  orchestrator.py  route_agent.py  state.py
backend/app/api/: deps.py
backend/app/models/: db.py  schemas.py
backend/app/services/: amadeus_client.py  embedding_service.py  llm_client.py  maps_client.py  search_service.py  solana_service.py
backend/app/utils/: validators.py
backend/app/workers/: deal_hunter_worker.py
backend/scripts/: seed_routes.py  warm_cache.py
backend/tests/: test_agents.py  test_endpoints.py
contracts/: Anchor.toml  package.json
contracts/idl/: travel_tokens.json
contracts/migrations/: deploy.ts
contracts/programs/travel_escrow/: Cargo.toml
contracts/programs/travel_escrow/src/: errors.rs  lib.rs  state.rs
contracts/programs/travel_escrow/src/instructions/: initialize_goal.rs  mod.rs  refund_sponsor.rs  release_funds.rs  sponsor.rs
contracts/tests/: travel_escrow.ts
docs/: api-contract.md  architecture.md  demo-script.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  (+1 more)
idl/: travel_escrow.json
(+50 files in other folders)
