[package]
name = "travel_escrow"
version = "0.1.0"
description = "Throne Travel escrow smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "travel_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
